Ajustement Deduction et Earning